# officemanagement-CLI

./: README.md  database.db  main.py  pyproject.toml  test.py
src/: Log.py  __init__.py  app.py  test.py
src/auth/: cheaker.py  login.py
src/banking/: bank.py  transction.py
src/chatroom/: __init__.py  chatroom.py  client.py  server.py
src/design/: stylr.py
src/images/: convert.py
src/models/: __init__.py  accounts.py  adminmodel.py  employee.py  messagemodel.py  worklist.py
src/office/: __init__.py  admin.py  empolyee.py  officemanagement.py  profile.py
src/settings/: .env  database.py  management.py
