[tool.poetry]
name = "officemanagement-CLI"
version = "0.1.0"
description = "A terminal Project That can Handel your Office Work ,Including Banking System"
authors = ["swadhinbiswas <swadhinbiswas.cse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
rich = "^13.9.4"
catppuccin = "^2.3.4"
sqlalchemy = "^2.0.36"
logging = "^0.4.9.6"
werkzeug = "^3.1.3"
typer = "^0.13.0"
terminal-img = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
